[package]
name = "ECE522_Project"
version = "0.1.0"
authors = ["Xiaoyong Hu <xhu13@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"
rand = "0.5.5"

[[bench]]
name = "my_benchmark"
harness = false