[package]
name = "Lab_4_part4"
version = "0.1.0"
authors = ["yilong <yilong8@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
image = "0.23.12"
num = "0.3.1"
num_cpus = "1.13.0"
threadpool = "1.8.1"
rayon = "1.5.0"